--- a/index.html
+++ b/index.html
@@ -64,6 +64,57 @@
 		</div>
 	</header>
 
+	<main class="main">
+		<section class="about">
+			<div class="container">
+				<h2 class="title">
+					о нас
+				</h2>
+				<div class="about__item">
+					<img class="about__img" src="images/branson.jpg" alt="branson">
+					<div class="about__content">
+						<h3 class="about__content-title">
+							Virgin Galactic
+						</h3>
+						<h5 class="about__content-subtitle">
+							суборбитальный полет
+						</h5>
+						<div class="about__content-text">
+							<p>
+								Компания Virgin Galactic 11 июля 2021 осуществила первый "туристическый" суборбитальный полет со
+								своим основателем, боританским миллмардером Ричардом Бренсоном на борту.
+							</p>
+							<p>
+								Компания Virgin Galactic 11 июля 2021 осуществила первый "туристическый" суборбитальный полет со
+								своим основателем, боританским миллмардером Ричардом Бренсоном на борту.
+							</p>
+							<p>
+								Компания Virgin Galactic 11 июля 2021 осуществила первый "туристическый" суборбитальный полет со
+								своим основателем, боританским миллмардером Ричардом Бренсоном на борту.
+							</p>
+						</div>
+						<table class="about__table">
+							<tr class="about__table-tr">
+								<td class="about__table-td"></td>
+								<td class="about__table-td"></td>
+								<td class="about__table-td"></td>
+								<td class="about__table-td"></td>
+								<td class="about__table-td"></td>
+							</tr>
+							<tr class="about__table-tr">
+								<td class="about__table-td"></td>
+								<td class="about__table-td"></td>
+								<td class="about__table-td"></td>
+								<td class="about__table-td"></td>
+								<td class="about__table-td"></td>
+							</tr>
+						</table>
+					</div>
+				</div>
+			</div>
+		</section>
+	</main>
+
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
