--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 					Как все <br> происходит
 				</h2>
 				<div class="how-to__box">
-					<svg width="900" height="555" viewBox="0 0 900 555" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<svg width="900" height="555" viewBox="0 0 900 700" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<line x1="20.2474" y1="19.56552" x2="161.247" y2="95.5655" stroke="white" />
 						<line x1="161.43" y1="95.7448" x2="215.43" y2="186.745" stroke="white" />
 						<line x1="215.439" y1="186.76" x2="286.439" y2="316.76" stroke="white" />
@@ -316,13 +316,96 @@
 							<circle cx="286" cy="317" r="10" fill="white" />
 							<text x="311" y="323" fill="white"> Садимся. Летим. Невесомость </text>
 						</g>
-						<circle cx="236" cy="414" r="10" fill="white" />
-
-						<circle cx="406" cy="535" r="10" fill="white" />
-						<circle cx="545" cy="435" r="10" fill="white" />
+						<g>
+							<circle cx="236" cy="414" r="10" fill="white" />
+							<foreignObject x="85" y="405" width="110" height="100" fil="white">
+								<p>
+									Делаем фото в инстаграм
+								</p>
+							</foreignObject>
+						</g>
+						<g>
+							<circle cx="406" cy="535" r="10" fill="white" />
+							<foreignObject x="400" y="560" width="200" height="100" fil="white">
+								<p>
+									Приземляемся, но это не точно
+								</p>
+							</foreignObject>
+						</g>
+						<g>
+							<circle cx="545" cy="435" r="10" fill="white" />
+							<foreignObject x="570" y="425" width="273" height="100" fil="white">
+								<p>
+									Едим из тюбиков: 5 видов меню на выбор (веган, спорт, безлактозное, безглютеновое, обычное)
+								</p>
+							</foreignObject>
+						</g>
 					</svg>
 				</div>
 			</div>
+		</section>
+
+
+
+		<section class="to-book">
+			<div class="container">
+				<div class="to-book__inner">
+					<h2 class="title">
+						Успей <br> забронировать!
+					</h2>
+					<p class="to-book_text">
+						Руководство Virgin Galactic надеется, что массовые суборбитальные космические полеты начнутся до 2022
+						года. Компания уже несколько лет продает билеты на такие полеты по 250 тыс долл.
+
+					</p>
+					<p class="to-book_text">
+						Virgin Galactic получила задатков более чем 80 млн долл, а количество желающих превышает 600 человек.
+
+					</p>
+				</div>
+			</div>
+		</section>
+		<section class="info">
+
+			<div class="speciol-offer">
+				<div class="container">
+					<h2 class="title">
+						Спец <br> предложения
+					</h2>
+					<div class="speciol-offer__inner">
+						<div class="speciol-offer__item">
+							<div class="speciol-offer__item-box">
+								<p class="speciol-offer__item-text">
+									Забронируй полет
+									<span> прямо сейчас</span>
+									и получи скидку
+									1000$
+								</p>
+								<div class="speciol-offer__price">
+									<p class="speciol-offer__old-price">250 000$</p>
+									<p class="speciol-offer__new-price">249 000$</p>
+								</div>
+							</div>
+							<button class="button">ЗАБРОНИРОВАТЬ ПОЛЕТ</button>
+						</div>
+
+						<div class="speciol-offer__item">
+							<div class="speciol-offer__item-box">
+								<p class="speciol-offer__item-text">
+									Приведи друга и получи <span>скидку 10% </span>
+									на следующий полет, если вернешься
+								</p>
+								<div class="speciol-offer__price">
+									<p class="speciol-offer__old-price">250 000$</p>
+									<p class="speciol-offer__new-price">225 000$</p>
+								</div>
+							</div>
+							<button class="button">ЗАБРОНИРОВАТЬ ПОЛЕТ</button>
+						</div>
+					</div>
+				</div>
+			</div>
+
 		</section>
 	</main>
 
