--- a/index.html
+++ b/index.html
@@ -365,8 +365,9 @@
 				</div>
 			</div>
 		</section>
-		<section class="info">
 
+
+		<section class="info">
 			<div class="speciol-offer">
 				<div class="container">
 					<h2 class="title">
@@ -386,7 +387,7 @@
 									<p class="speciol-offer__new-price">249 000$</p>
 								</div>
 							</div>
-							<button class="button">ЗАБРОНИРОВАТЬ ПОЛЕТ</button>
+							<button class="button speciol-offer__btn">ЗАБРОНИРОВАТЬ ПОЛЕТ</button>
 						</div>
 
 						<div class="speciol-offer__item">
@@ -400,7 +401,7 @@
 									<p class="speciol-offer__new-price">225 000$</p>
 								</div>
 							</div>
-							<button class="button">ЗАБРОНИРОВАТЬ ПОЛЕТ</button>
+							<button class="button speciol-offer__btn">ЗАБРОНИРОВАТЬ ПОЛЕТ</button>
 						</div>
 					</div>
 				</div>
