--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 							<input class="contacts__form-input" placeholder="Имя ребенка или внука (на всякий случай)"
 								type="text">
 							<input class="contacts__form-input" placeholder="Телефон" type="tel">
-							<button class="button" type="submit"></button>
+							<button class="button contacts__btn" type="submit">ЗАБРОНИРОВАТЬ ПОЛЕТ</button>
 						</form>
 					</div>
 					<div class="contacts__guarantees">
@@ -490,8 +490,8 @@
 						</h2>
 						<p class="contacts__guarantees-text">
 							Ни одна моя ракета еще не сделала удачную попытку, потому что в ней не было тебя!
-							Будь первым! Колонизируй Марс!
-							Илон Маск
+							<br> Будь первым! Колонизируй Марс!
+							<br> Илон Маск
 						</p>
 						<img class="contacts__guarantees-img" src="images/mask-guarantees.png" alt="mask">
 					</div>
@@ -499,6 +499,33 @@
 			</div>
 		</section>
 	</main>
+	<footer class="footer">
+		<div class="container">
+			<div class="footer__text">
+				<p>
+					Служба поддержки работает межгалактично и суборбитально
+				</p>
+				<p>
+					График приема посетителей строго по записи
+				</p>
+			</div>
+			<ul class="footer__menu">
+				<li class="footer__menu-item"><a class="footer__menu-link" href="#">СТОИМОСТЬ</a></li>
+				<li class="footer__menu-item"><a class="footer__menu-link" href="#">ДОП. УСЛУГИ</a></li>
+				<li class="footer__menu-item"><a class="footer__menu-link" href="#">ГАРАНТИИ</a></li>
+				<li class="footer__menu-item"><a class="footer__menu-link" href="#">НОВОСТИ</a></li>
+				<li class="footer__menu-item"><a class="footer__menu-link" href="#">О НАС </a></li>
+			</ul>
+
+			<ul class="footer__links">
+				<li class="footer__links-item"><a class="footer__links-link" href="#">СТОИМОСТЬ</a></li>
+				<li class="footer__links-item"><a class="footer__links-link" href="#">ДОП. УСЛУГИ</a></li>
+				<li class="footer__links-item"><a class="footer__links-link" href="#">ГАРАНТИИ</a></li>
+				<li class="footer__links-item"><a class="footer__links-link" href="#">НОВОСТИ</a></li>
+				<li class="footer__links-item"><a class="footer__links-link" href="#">О НАС </a></li>
+			</ul>
+		</div>
+	</footer>
 
 
 
