--- a/index.html
+++ b/index.html
@@ -353,12 +353,12 @@
 					<h2 class="title">
 						Успей <br> забронировать!
 					</h2>
-					<p class="to-book_text">
+					<p class="to-book__text">
 						Руководство Virgin Galactic надеется, что массовые суборбитальные космические полеты начнутся до 2022
 						года. Компания уже несколько лет продает билеты на такие полеты по 250 тыс долл.
 
 					</p>
-					<p class="to-book_text">
+					<p class="to-book__text">
 						Virgin Galactic получила задатков более чем 80 млн долл, а количество желающих превышает 600 человек.
 
 					</p>
