--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
 							</p>
 						</div>
 						<div class="services__bottons">
-							<button class="button services__btn services__btn__first">КУПИТЬ УСЛУГИ ФОТОГРАФА</button>
+							<button class="button services__btn services__btn-first">КУПИТЬ УСЛУГИ ФОТОГРАФА</button>
 							<button class="button services__btn">ХОЧУ И ДИСК</button>
 						</div>
 					</div>
